# test_task_lucidreams

./: README.md  docker-compose.yaml  project.env  pyproject.toml
api/: alembic.ini  config.py  database.py  hash_utils.py  logger.py  main.py  oauth2.py
api/controller/: __init__.py  auth.py  post.py
api/dependency/: user.py
api/migrations/: env.py
api/migrations/versions/: 085b2223919f_init.py
api/model/: __init__.py  post.py  user.py
api/router/: __init__.py  auth.py  post.py
api/schema/: __init__.py  auth.py  post.py
