[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["sa1am8 <tinkerino571@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
alchemical = "^1.0.1"
alembic = "^1.13.1"
pymysql = "^1.1.0"
cryptography = "^42.0.5"
cachetools = "^5.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
